--- a/notebooks/data-view.ipynb
+++ b/notebooks/data-view.ipynb
@@ -2,75 +2,265 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2025-12-06T15:07:36.272807Z",
      "start_time": "2025-12-06T15:07:35.866323Z"
-    }
+    },
+    "collapsed": true
    },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
-   ],
-   "outputs": [],
-   "execution_count": 1
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b4ac33be754b02d0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-12-06T15:08:30.547032Z",
      "start_time": "2025-12-06T15:08:30.536225Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "serving_df = pd.read_csv('/Users/sunnakh/Desktop/kaggle-competitions/Titanic - Machine Learning from Disaster/data/test.csv')\n",
-    "training_df = pd.read_csv('/Users/sunnakh/Desktop/kaggle-competitions/Titanic - Machine Learning from Disaster/data/train.csv')"
-   ],
-   "id": "b4ac33be754b02d0",
    "outputs": [],
-   "execution_count": 2
+   "source": [
+    "serving_df = pd.read_csv(\n",
+    "    \"/Users/sunnakh/Desktop/kaggle-competitions/Titanic-Machine-Learning-from-Disaster/data/test.csv\"\n",
+    ")\n",
+    "training_df = pd.read_csv(\n",
+    "    \"/Users/sunnakh/Desktop/kaggle-competitions/Titanic-Machine-Learning-from-Disaster/data/train.csv\"\n",
+    ")"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "120480ddef2c63f3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-12-06T15:08:35.866377Z",
      "start_time": "2025-12-06T15:08:35.857880Z"
     }
    },
-   "cell_type": "code",
-   "source": "serving_df.head(10)",
-   "id": "120480ddef2c63f3",
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "   PassengerId  Pclass                                          Name     Sex  \\\n",
-       "0          892       3                              Kelly, Mr. James    male   \n",
-       "1          893       3              Wilkes, Mrs. James (Ellen Needs)  female   \n",
-       "2          894       2                     Myles, Mr. Thomas Francis    male   \n",
-       "3          895       3                              Wirz, Mr. Albert    male   \n",
-       "4          896       3  Hirvonen, Mrs. Alexander (Helga E Lindqvist)  female   \n",
-       "5          897       3                    Svensson, Mr. Johan Cervin    male   \n",
-       "6          898       3                          Connolly, Miss. Kate  female   \n",
-       "7          899       2                  Caldwell, Mr. Albert Francis    male   \n",
-       "8          900       3     Abrahim, Mrs. Joseph (Sophie Halaut Easu)  female   \n",
-       "9          901       3                       Davies, Mr. John Samuel    male   \n",
-       "\n",
-       "    Age  SibSp  Parch     Ticket     Fare Cabin Embarked  \n",
-       "0  34.5      0      0     330911   7.8292   NaN        Q  \n",
-       "1  47.0      1      0     363272   7.0000   NaN        S  \n",
-       "2  62.0      0      0     240276   9.6875   NaN        Q  \n",
-       "3  27.0      0      0     315154   8.6625   NaN        S  \n",
-       "4  22.0      1      1    3101298  12.2875   NaN        S  \n",
-       "5  14.0      0      0       7538   9.2250   NaN        S  \n",
-       "6  30.0      0      0     330972   7.6292   NaN        Q  \n",
-       "7  26.0      1      1     248738  29.0000   NaN        S  \n",
-       "8  18.0      0      0       2657   7.2292   NaN        C  \n",
-       "9  21.0      2      0  A/4 48871  24.1500   NaN        S  "
-      ],
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "PassengerId",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Pclass",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Name",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Sex",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Age",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "SibSp",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Parch",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Ticket",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Fare",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Cabin",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "Embarked",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "35c59901-2b58-4377-894f-14efe56ea53f",
+       "rows": [
+        [
+         "0",
+         "892",
+         "3",
+         "Kelly, Mr. James",
+         "male",
+         "34.5",
+         "0",
+         "0",
+         "330911",
+         "7.8292",
+         null,
+         "Q"
+        ],
+        [
+         "1",
+         "893",
+         "3",
+         "Wilkes, Mrs. James (Ellen Needs)",
+         "female",
+         "47.0",
+         "1",
+         "0",
+         "363272",
+         "7.0",
+         null,
+         "S"
+        ],
+        [
+         "2",
+         "894",
+         "2",
+         "Myles, Mr. Thomas Francis",
+         "male",
+         "62.0",
+         "0",
+         "0",
+         "240276",
+         "9.6875",
+         null,
+         "Q"
+        ],
+        [
+         "3",
+         "895",
+         "3",
+         "Wirz, Mr. Albert",
+         "male",
+         "27.0",
+         "0",
+         "0",
+         "315154",
+         "8.6625",
+         null,
+         "S"
+        ],
+        [
+         "4",
+         "896",
+         "3",
+         "Hirvonen, Mrs. Alexander (Helga E Lindqvist)",
+         "female",
+         "22.0",
+         "1",
+         "1",
+         "3101298",
+         "12.2875",
+         null,
+         "S"
+        ],
+        [
+         "5",
+         "897",
+         "3",
+         "Svensson, Mr. Johan Cervin",
+         "male",
+         "14.0",
+         "0",
+         "0",
+         "7538",
+         "9.225",
+         null,
+         "S"
+        ],
+        [
+         "6",
+         "898",
+         "3",
+         "Connolly, Miss. Kate",
+         "female",
+         "30.0",
+         "0",
+         "0",
+         "330972",
+         "7.6292",
+         null,
+         "Q"
+        ],
+        [
+         "7",
+         "899",
+         "2",
+         "Caldwell, Mr. Albert Francis",
+         "male",
+         "26.0",
+         "1",
+         "1",
+         "248738",
+         "29.0",
+         null,
+         "S"
+        ],
+        [
+         "8",
+         "900",
+         "3",
+         "Abrahim, Mrs. Joseph (Sophie Halaut Easu)",
+         "female",
+         "18.0",
+         "0",
+         "0",
+         "2657",
+         "7.2292",
+         null,
+         "C"
+        ],
+        [
+         "9",
+         "901",
+         "3",
+         "Davies, Mr. John Samuel",
+         "male",
+         "21.0",
+         "2",
+         "0",
+         "A/4 48871",
+         "24.15",
+         null,
+         "S"
+        ]
+       ],
+       "shape": {
+        "columns": 11,
+        "rows": 10
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -247,6 +437,31 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Pclass                                          Name     Sex  \\\n",
+       "0          892       3                              Kelly, Mr. James    male   \n",
+       "1          893       3              Wilkes, Mrs. James (Ellen Needs)  female   \n",
+       "2          894       2                     Myles, Mr. Thomas Francis    male   \n",
+       "3          895       3                              Wirz, Mr. Albert    male   \n",
+       "4          896       3  Hirvonen, Mrs. Alexander (Helga E Lindqvist)  female   \n",
+       "5          897       3                    Svensson, Mr. Johan Cervin    male   \n",
+       "6          898       3                          Connolly, Miss. Kate  female   \n",
+       "7          899       2                  Caldwell, Mr. Albert Francis    male   \n",
+       "8          900       3     Abrahim, Mrs. Joseph (Sophie Halaut Easu)  female   \n",
+       "9          901       3                       Davies, Mr. John Samuel    male   \n",
+       "\n",
+       "    Age  SibSp  Parch     Ticket     Fare Cabin Embarked  \n",
+       "0  34.5      0      0     330911   7.8292   NaN        Q  \n",
+       "1  47.0      1      0     363272   7.0000   NaN        S  \n",
+       "2  62.0      0      0     240276   9.6875   NaN        Q  \n",
+       "3  27.0      0      0     315154   8.6625   NaN        S  \n",
+       "4  22.0      1      1    3101298  12.2875   NaN        S  \n",
+       "5  14.0      0      0       7538   9.2250   NaN        S  \n",
+       "6  30.0      0      0     330972   7.6292   NaN        Q  \n",
+       "7  26.0      1      1     248738  29.0000   NaN        S  \n",
+       "8  18.0      0      0       2657   7.2292   NaN        C  \n",
+       "9  21.0      2      0  A/4 48871  24.1500   NaN        S  "
       ]
      },
      "execution_count": 3,
@@ -254,21 +469,88 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "source": [
+    "serving_df.head(10)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5da51ad227a1c2e0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-12-06T15:08:58.728355Z",
      "start_time": "2025-12-06T15:08:58.725146Z"
     }
    },
-   "cell_type": "code",
-   "source": "serving_df.isna().sum()",
-   "id": "5da51ad227a1c2e0",
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "0",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "e6c19aac-d703-4adb-a765-90a55c4e4202",
+       "rows": [
+        [
+         "PassengerId",
+         "0"
+        ],
+        [
+         "Pclass",
+         "0"
+        ],
+        [
+         "Name",
+         "0"
+        ],
+        [
+         "Sex",
+         "0"
+        ],
+        [
+         "Age",
+         "86"
+        ],
+        [
+         "SibSp",
+         "0"
+        ],
+        [
+         "Parch",
+         "0"
+        ],
+        [
+         "Ticket",
+         "0"
+        ],
+        [
+         "Fare",
+         "1"
+        ],
+        [
+         "Cabin",
+         "327"
+        ],
+        [
+         "Embarked",
+         "0"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 11
+       }
+      },
       "text/plain": [
        "PassengerId      0\n",
        "Pclass           0\n",
@@ -284,39 +566,41 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "source": [
+    "serving_df.isna().sum()"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "914e1c2d294c34b1"
+   "id": "914e1c2d294c34b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
